# cripton

./: .env.example  .gitignore  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml
.github/workflows/: security.yml
config/: default.toml
crates/alerts/: Cargo.toml
crates/alerts/src/: lib.rs  telegram.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  server.rs
crates/api/src/routes/: metrics.rs  mod.rs  status.rs  trades.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  redis_cache.rs
crates/core/: Cargo.toml
crates/core/src/: enums.rs  errors.rs  lib.rs  models.rs
crates/exchanges/: Cargo.toml
crates/exchanges/src/: lib.rs  traits.rs
crates/exchanges/src/binance/: mod.rs  rest.rs  ws.rs
crates/exchanges/src/bitso/: mod.rs  rest.rs
crates/exchanges/src/kraken/: mod.rs  rest.rs
crates/execution/: Cargo.toml
crates/execution/src/: engine.rs  lib.rs  order_manager.rs  slippage.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: collector.rs  lib.rs  normalizer.rs  orderbook.rs
crates/mirofish/: Cargo.toml
crates/mirofish/src/: advisor.rs  lib.rs
crates/paper/: Cargo.toml
crates/paper/src/: engine.rs  lib.rs
crates/ratelimit/: Cargo.toml
crates/ratelimit/src/: lib.rs  limiter.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  lib.rs  manager.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  windows.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  postgres.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: cross_exchange.rs  lib.rs  traits.rs  triangular_arb.rs
dashboard/: Dockerfile
dashboard/src/app/: layout.tsx  page.tsx
deploy/: prometheus.yml
scripts/: backtest.py  setup_db.sql
src/: main.rs
