[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/exchanges",
    "crates/market_data",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
url = "2"

# Internal crates
cripton-core = { path = "crates/core" }
cripton-exchanges = { path = "crates/exchanges" }
cripton-market-data = { path = "crates/market_data" }

[package]
name = "cripton"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cripton"
path = "src/main.rs"

[dependencies]
cripton-core = { workspace = true }
cripton-exchanges = { workspace = true }
cripton-market-data = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
