[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/exchanges",
    "crates/market_data",
    "crates/strategy",
    "crates/execution",
    "crates/risk",
    "crates/storage",
    "crates/scheduler",
    "crates/paper",
    "crates/ratelimit",
    "crates/api",
    "crates/alerts",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
url = "2"

# Internal crates
cripton-core = { path = "crates/core" }
cripton-exchanges = { path = "crates/exchanges" }
cripton-market-data = { path = "crates/market_data" }
cripton-strategy = { path = "crates/strategy" }
cripton-execution = { path = "crates/execution" }
cripton-risk = { path = "crates/risk" }
cripton-storage = { path = "crates/storage" }
cripton-scheduler = { path = "crates/scheduler" }
cripton-paper = { path = "crates/paper" }
cripton-ratelimit = { path = "crates/ratelimit" }
cripton-api = { path = "crates/api" }
cripton-alerts = { path = "crates/alerts" }

[package]
name = "cripton"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cripton"
path = "src/main.rs"

[dependencies]
cripton-core = { workspace = true }
cripton-exchanges = { workspace = true }
cripton-market-data = { workspace = true }
cripton-strategy = { workspace = true }
cripton-execution = { workspace = true }
cripton-risk = { workspace = true }
cripton-storage = { workspace = true }
cripton-scheduler = { workspace = true }
cripton-paper = { workspace = true }
cripton-ratelimit = { workspace = true }
cripton-api = { workspace = true }
cripton-alerts = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1.40.0"
zeroize = "1.8.2"
chrono = { workspace = true }
