[package]
name = "cripton-api"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
cripton-risk = { path = "../risk" }
cripton-execution = { path = "../execution" }
cripton-storage = { path = "../storage" }
cripton-scheduler = { path = "../scheduler" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
