[package]
name = "cripton-cache"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
