[package]
name = "cripton-exchanges"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1.89"
hmac-sha256 = "1.1.14"
