[package]
name = "cripton-market-data"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
cripton-exchanges = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
