[package]
name = "cripton-mirofish"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1.40"
chrono = { workspace = true }
