[package]
name = "cripton-paper"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
cripton-exchanges = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1.40"
chrono = { workspace = true }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
