[package]
name = "cripton-risk"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
rust_decimal_macros = "1.40.0"
