[package]
name = "cripton-storage"
version.workspace = true
edition.workspace = true

[dependencies]
cripton-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
uuid = { version = "1", features = ["v4"] }
